change navbar not complete yet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,9 @@
         "Sarabun",
         "SCOPUS",
         "setfile",
+        "Signat",
         "sjrh",
+        "startwork",
         "Symp",
         "totalapprove",
         "totalapproved",
@@ -75,6 +77,7 @@
         "กรกฎาคม",
         "กรณีที่จัดการประชุมฯ",
         "กรณีเบิกค่าใช้จ่ายเต็มวงเงิน",
+        "กรอกได้แต่จำนวนเต็ม",
         "กรอกได้เมื่อเลือก",
         "กรุงเทพฯ",
         "กรุณกรอกปีของ",
@@ -83,9 +86,11 @@
         "กรุณากรอกข้อมูลครั",
         "กรุณากรอกข้อมูลครั้งที่เป็นตัวเลข",
         "กรุณากรอกข้อมูลคะแนน",
+        "กรุณากรอกข้อมูลจำนวนปีที่ทำงาน",
         "กรุณากรอกข้อมูลฉบับที",
         "กรุณากรอกข้อมูลชื",
         "กรุณากรอกข้อมูลเดินทาง",
+        "กรุณากรอกข้อมูลตำแหน่ง",
         "กรุณากรอกข้อมูลปี",
         "กรุณากรอกข้อมูลปีงบประมาณเป็นพ",
         "กรุณากรอกข้อมูลปีที",
@@ -114,13 +119,18 @@
         "กรุณากรอกปีให้ตรงกันกับปีของ",
         "กรุณากรอกปีให้ตรงกันกับปีของค่า",
         "กรุณากรอกเป็นจำนวนเต็ม",
+        "กรุณากรอกเป็นตัวเลข",
         "กรุณากรอกเป็นตัวหนังสือ",
+        "กรุณากรอกเป็นภาษาไทย",
+        "กรุณากรอกเป็นภาษาอังกฤษ",
+        "กรุณากรอกเป็นอีเมล",
         "กรุณากรอกผู",
         "กรุณากรอกวงเงินงบประมาณการวิจัย",
         "กรุณากรอกวันที่เริ่มต้น",
         "กรุณากรอกวันที่สิ้นสุด",
         "กรุณากรอกวันประกาศผลการพิจารณา",
         "กรุณากรอกวันสุดท้ายของการจ่ายค่าตีพิมพ์",
+        "กรุณากรอกอีเมล",
         "กรุณาตรวจสอบ",
         "กรุณาตรวจสอบความถูกต้องก่อนกดยืนยัน",
         "กรุณาตรวจสอบคะแนน",
@@ -143,12 +153,14 @@
         "กรุณาเลือกว่าไปต่างประเทศ",
         "กรุณาเลือกว่ารูปแบบผู้ประพันธ์",
         "กรุณาเลือกสูตรที่ใช้ในการคำนวณ",
+        "กรุณาเลือกหน้าที",
         "กรุณาอัปโหลดไฟล์",
         "ก่อนกรอง",
         "ก่อนการตอบรับบทความ",
         "ก่อนการตอบรับบทความจากผู",
         "ก่อนการประชุม",
         "กันยายน",
+        "การจัดการผู",
         "การตอบรับให้ลงตีพิมพ์",
         "การประชุมทางวิชาการ",
         "การประชุมวิชาการจัดในประเทศ",
@@ -160,7 +172,11 @@
         "กุมภาพันธ์",
         "เกิดข้อผิดพลาดในการบันทึกข้อมูล",
         "เกิดข้อผิดพลาดในการอัปเดต",
+        "เกิดข้อผิดพลาดในการอัปเดตข้อมูล",
         "แก้user",
+        "แก้ไข",
+        "แก้ไขข้อมูล",
+        "แก้ไขหน้าที่ของผู้ใช้",
         "แก้เงื่อนไขการพิจารณา",
         "แก้ด้วย",
         "แก้วสีดา",
@@ -231,6 +247,10 @@
         "จำนวนเงินทั",
         "จำนวนเงินที่ขออนุมัติจัดสรรในครั้งนี้",
         "จำนวนเงินที่ใช้ไปแล้ว",
+        "จำนวนปีที่เริ่มทำงาน",
+        "เจ้าหน้าที่การเงิน",
+        "เจ้าหน้าที่งานวิจัย",
+        "เจ้าหน้าที่บริหารทรัพยากรบุคคล",
         "ฉบับที",
         "ชื่อผลงานวิจัยที่นำเสนอ",
         "ชื่อไฟล์ที่บันทึก",
@@ -243,6 +263,7 @@
         "ดีมาก",
         "ดึงข้อมูล",
         "ดูลายเซ็นที่อัปโหลด",
+        "ดูแล",
         "ดูเอกสาร",
         "เดินทางในต่างประเทศ",
         "เดินทางในประเทศ",
@@ -265,6 +286,7 @@
         "ตรวจสอบปีและวันที",
         "ตรวจสอบว่าข้อมูลเป็น",
         "ตรวจสอบว่าทุกค่ามีข้อมูล",
+        "ตรวจสอบว่ามี",
         "ต้องพิมพ์เป็น",
         "ต้องไม่เกิดก่อนวันที่ส่งงานวิจัย",
         "ต้องไม่เกิน",
@@ -278,8 +300,11 @@
         "ตีพิมพ์ผลงานวารสาร",
         "ตุลาคม",
         "แต่ยังไม่ทำ",
+        "ถ้าเป็นค่าว่างให้เป็น",
         "ถ้ามี",
+        "ถ้ามีแล้วให้อัปเดตค่าใหม่",
         "ถ้าไม่มีไฟล์",
+        "ถ้ายังไม่มีให้เพิ",
         "ถึงวันที",
         "ถูกต้อง",
         "ทวีป",
@@ -325,6 +350,7 @@
         "ปีไม่สามารถมากกว่าปีปัจจุบันได้",
         "เป็นจำนวนเงิน",
         "เป็นวารสารที่อยู่ในฐานข้อมูลสากล",
+        "แปลงค่าเป็นตัวเลขถ้าเป็น",
         "โปรดกรอกข้อมูลให้ครบถ้วน",
         "โปรดเข้าสู่ระบบใหม่อีกครั้ง",
         "โปรดลองอีกครั้งในภายหลัง",
@@ -346,6 +372,8 @@
         "ภาษาไทย",
         "ภาษาอังกฤษ",
         "มกราคม",
+        "มงาน",
+        "มทำงาน",
         "มวิจัย",
         "มาตรฐาน",
         "มาตรฐานการวิจัย",
@@ -367,6 +395,7 @@
         "ไม่บังคับ",
         "ไม่มีข้อมูล",
         "ไม่มีวัตถุประสงค์เพื่อประโยชน์ทางการค้า",
+        "ไม่มีอักขระพิเศษนอกจาก",
         "ไม่สามารถกรอกวันประกาศผลก่อน",
         "ไม่สามารถกรอกวันประกาศผลก่อนวันที่สมัคร",
         "ไม่สามารถต่ำกว่า",
@@ -374,6 +403,9 @@
         "ไม่สามารถส่งข้อมูล",
         "ไม่อนุมัติ",
         "ไม่อยู",
+        "ยกเลิก",
+        "ยอดเงินในการตีพิมพ์วารสาร",
+        "ยอดเงินในการประชุมวิชาการ",
         "ยอดที่ใช้ของการขออนุมัติค่า",
         "ยืนยันข้อมูลถูกต้อง",
         "ยืนยันตัวตนด้วยบริการของ",
@@ -399,6 +431,10 @@
         "รายละเอียดผลงานวิจัยที่ส่งเสนอพิจารณา",
         "รายละเอียดวารสารที่ส่งเสนอพิจารณา",
         "เรียน",
+        "ลบผู",
+        "ลบผู้ใช้เรียบร้อย",
+        "ลบลายเซ็นผู",
+        "ลบลายเซ็นผู้ใช้เรียบร้อย",
         "ลาครั",
         "ลายเซ็น",
         "ลำดับ",
@@ -407,6 +443,8 @@
         "เลือกเดือน",
         "เลือกได้แค่ครั",
         "เลือกวงเงินสนับสนุน",
+        "เลือกหน้าที",
+        "แล้วหรือไม่",
         "และค่าใช้จ่ายอื",
         "และจำเป็นต้องกรอกทุกช่อง",
         "และถูกต้อง",
@@ -458,6 +496,10 @@
         "สิงหาคม",
         "สิทธิ",
         "หนังสือตอบรับบทความ",
+        "หน้าจอ",
+        "หน้าที",
+        "หน้าที่ของผู้ใช้",
+        "หน้าที่ของผู้ใช้เดิม",
         "หรือ",
         "หรือคณะเป็นผู้ร่วมจัด",
         "หรือจังหวัดที่ไปประชุมวิชาการ",
@@ -479,6 +521,7 @@
         "หัวหน้าโครงการ",
         "หากเป็น",
         "โหลดเอกสาร",
+        "ใหม่เข้าไป",
         "อการประชุม",
         "อการประชุมทางวิชาการ",
         "อแก้ไข",
@@ -501,12 +544,15 @@
         "ออกจาก",
         "ออกจากระบบ",
         "อัตราค่าใช้จ่ายที่ประกาศบนหน้าเว็บไซต์",
+        "อัปเดตข้อมูล",
         "อัปเดตข้อมูลบนหน้า",
         "อัปเดตค่า",
         "อัปเดตสถานะของทุก",
         "อัปโหลดได้เฉพาะไฟล์",
         "อัปโหลดลายเซ็นเรียบร้อยแล้ว",
+        "อาจารย์",
         "อีเมล",
+        "อีเมลต้องเป็น",
         "เอกสารที",
         "เอกสารที่อนุมัติแล้ว",
         "เอกสารประชาสัมพันธ์การจัดการประชุม",
