input data to backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,15 @@
         "allstatus",
         "amout",
         "appeove",
+        "ASEAN",
         "Assosiate",
         "axios",
         "caltotal",
         "Chage",
         "checkfile",
         "countwithdraw",
+        "courseco",
+        "CPDF",
         "creat",
         "Datafor",
         "Dataforbackend",
@@ -22,6 +25,8 @@
         "Filekris",
         "finc",
         "formattedres",
+        "Hindawi",
+        "Historyof",
         "insecter",
         "inthai",
         "ISSN",
@@ -32,8 +37,12 @@
         "luxon",
         "Mainbox",
         "maintext",
+        "MDPI",
+        "myhistory",
         "mynotification",
+        "mystatus",
         "mytabs",
+        "nameco",
         "nameeng",
         "nameth",
         "noti",
@@ -41,6 +50,7 @@
         "Notificationby",
         "numapprove",
         "numapproved",
+        "numco",
         "Offi",
         "Offic",
         "pdfmake",
@@ -63,6 +73,7 @@
         "Signat",
         "sjrh",
         "startwork",
+        "Statusof",
         "Symp",
         "totalapprove",
         "totalapproved",
@@ -77,6 +88,7 @@
         "กรกฎาคม",
         "กรณีที่จัดการประชุมฯ",
         "กรณีเบิกค่าใช้จ่ายเต็มวงเงิน",
+        "กรอกคะแนนไม่ถูกต้อง",
         "กรอกได้แต่จำนวนเต็ม",
         "กรอกได้เมื่อเลือก",
         "กรุงเทพฯ",
@@ -103,6 +115,7 @@
         "กรุณากรอกความคิดเห็น",
         "กรุณากรอกค่า",
         "กรุณากรอกค่าเป็น",
+        "กรุณากรอกค่าพาหนะเดินทาง",
         "กรุณากรอกจำนวนค่าเช่าที",
         "กรุณากรอกจำนวนค่าเบี้ยเลี้ยงเดินทาง",
         "กรุณากรอกจำนวนค่าลงทะเบียน",
@@ -155,6 +168,7 @@
         "กรุณาเลือกสูตรที่ใช้ในการคำนวณ",
         "กรุณาเลือกหน้าที",
         "กรุณาอัปโหลดไฟล์",
+        "กรุณาอัปโหลดลายเซ้นต์",
         "ก่อนกรอง",
         "ก่อนการตอบรับบทความ",
         "ก่อนการตอบรับบทความจากผู",
@@ -162,6 +176,7 @@
         "กันยายน",
         "การจัดการผู",
         "การตอบรับให้ลงตีพิมพ์",
+        "การเบิกค่าใช้จ่าย",
         "การประชุมทางวิชาการ",
         "การประชุมวิชาการจัดในประเทศ",
         "การประชุมวิชาการนานาชาติ",
@@ -169,6 +184,7 @@
         "การมีส่วนร่วมไม่สามารถกรอกได้มากกว่า",
         "การลา",
         "การวิจัย",
+        "กำหนด",
         "กุมภาพันธ์",
         "เกิดข้อผิดพลาดในการบันทึกข้อมูล",
         "เกิดข้อผิดพลาดในการอัปเดต",
@@ -176,6 +192,7 @@
         "แก้user",
         "แก้ไข",
         "แก้ไขข้อมูล",
+        "แก้ไขเงือนไขในการพิจารณาการสนับสนุน",
         "แก้ไขหน้าที่ของผู้ใช้",
         "แก้เงื่อนไขการพิจารณา",
         "แก้ด้วย",
@@ -227,6 +244,7 @@
         "ค่าอื",
         "คำนวณ",
         "คำนวณจาก",
+        "คำนวณแบบ",
         "คุณภาพการประชุม",
         "คุณภาพของการประชุม",
         "โครงการวิจัย",
@@ -242,11 +260,14 @@
         "จังหวัด",
         "จัดการข้อมูลหลัก",
         "จำนวน",
+        "จำนวนครั้งในการลามากที่สุด",
         "จำนวนเงิน",
         "จำนวนเงินคงเหลือทั",
         "จำนวนเงินทั",
         "จำนวนเงินที่ขออนุมัติจัดสรรในครั้งนี้",
         "จำนวนเงินที่ใช้ไปแล้ว",
+        "จำนวนเงินที่เบิกได้เมื่ออยู่ใน",
+        "จำนวนนักวิจัยร่วม",
         "จำนวนปีที่เริ่มทำงาน",
         "เจ้าหน้าที่การเงิน",
         "เจ้าหน้าที่งานวิจัย",
@@ -255,13 +276,16 @@
         "ชื่อผลงานวิจัยที่นำเสนอ",
         "ชื่อไฟล์ที่บันทึก",
         "เช็คคะแนนได้จาก",
+        "เช็คว่า",
         "เช็คว่าเป็น",
         "ใช้คะแนนที่คำนวณจาก",
+        "ใช้ในการตรวจสอบการล็อกอิน",
         "ใช้ประกอบการเบิก",
         "ใช้ผลการจัดระดับ",
         "ดัชนี",
         "ดีมาก",
         "ดึงข้อมูล",
+        "ดูตรงนี",
         "ดูลายเซ็นที่อัปโหลด",
         "ดูแล",
         "ดูเอกสาร",
@@ -270,10 +294,14 @@
         "เดินทางระหว่างประเทศ",
         "เดินทางวันที",
         "เดือน",
+        "โดยเช็คจาก",
         "โดยมติคณะ",
         "โดยมีการกำหนดคุณภาพแบ่งเป็น",
+        "ได้คะแนนไม่ต่ำกว่า",
         "ได้จาก",
+        "ได้เบิก",
         "ได้มาจาก",
+        "ได้ระดับมาตรฐาน",
         "ได้รับการจัดลำดับ",
         "ได้รับการตอบรับให้ตีพิมพ์",
         "ตกลง",
@@ -282,11 +310,13 @@
         "ตรวจว่าวันที่ไม่เกิดก่อนวันนี้",
         "ตรวจว่าวันที่ไม่อยู่หลัง",
         "ตรวจว่าวันที่ไม่อยู่หลังวันนี้",
+        "ตรวจสอบการล็อกอินก่อน",
         "ตรวจสอบข้อมูลและหลักฐาน",
         "ตรวจสอบปีและวันที",
         "ตรวจสอบว่าข้อมูลเป็น",
         "ตรวจสอบว่าทุกค่ามีข้อมูล",
         "ตรวจสอบว่ามี",
+        "ต้องทำงานไม่เกินกี",
         "ต้องพิมพ์เป็น",
         "ต้องไม่เกิดก่อนวันที่ส่งงานวิจัย",
         "ต้องไม่เกิน",
@@ -304,7 +334,12 @@
         "ถ้ามี",
         "ถ้ามีแล้วให้อัปเดตค่าใหม่",
         "ถ้าไม่มีไฟล์",
+        "ถ้าไม่มีสิทธิ์เข้าถึง",
+        "ถ้ายังไม่ได้ล็อกอิน",
+        "ถ้ายังไม่ได้โหลดข้อมูลผู",
         "ถ้ายังไม่มีให้เพิ",
+        "ถ้าวารสารเป็นของสำนักพิมพ์",
+        "ถ้าวารสารเป็นของสำนักพิมพ์อื",
         "ถึงวันที",
         "ถูกต้อง",
         "ทวีป",
@@ -315,6 +350,7 @@
         "นวัตกรรม",
         "นสุด",
         "นางภรินทร์",
+        "นามสกุลของนักวิจัยร่วม",
         "ในscopus",
         "ในกรณีลาครั",
         "ในการลา",
@@ -327,12 +363,17 @@
         "บันทึกข้อมูล",
         "บันทึกข้อมูลเรียบร้อย",
         "บันทึกข้อมูลเรียบร้อยแล้ว",
+        "บันทึกแบบร่าง",
+        "บันทึกแบบร่างเรียบร้อยแล้ว",
         "แบบเสนอโครงการวิจัย",
         "ใบแจ้งหนี้ค่าใช้จ่าย",
         "ใบแจ้งหนี้ค่าใช้จ่ายสำหรับการตีพิมพ์",
         "ประกอบการเบิก",
         "ประจำปี",
         "ประเทศ",
+        "ประเทศใกล้เคียง",
+        "ประเทศประเทศในโซนยุโรป",
+        "ประเทศเอเชีย",
         "ประพันธ์บรรณกิจ",
         "ประพันธ์อันดับแรก",
         "ประเภทการขอรับสนับสนุน",
@@ -348,6 +389,7 @@
         "ปีไม่สามารถเป็นปีที่มากกว่าปีนี้",
         "ปีไม่สามารถเป็นปีที่มากกว่าปีปัจจุบัน",
         "ปีไม่สามารถมากกว่าปีปัจจุบันได้",
+        "เป็น",
         "เป็นจำนวนเงิน",
         "เป็นวารสารที่อยู่ในฐานข้อมูลสากล",
         "แปลงค่าเป็นตัวเลขถ้าเป็น",
@@ -362,6 +404,8 @@
         "ฝ่ายบริหารการเงิน",
         "ฝ่ายบริหารงานวิจัย",
         "ฝ่ายบริหารทรัพยากรบุคคล",
+        "พนักงานที่ม่เคยไปประชุมวิชาการ",
+        "พนักงานที่ไม่เคยไปประชุมวิชาการ",
         "พฤศจิกายน",
         "พฤษภาคม",
         "พักไม่เกิน",
@@ -389,10 +433,13 @@
         "มีรายชื่ออยู่ใน",
         "เมษายน",
         "ไม่เกิน",
+        "ไม่เกินกี",
         "ไม่ใช่",
         "ไม่ต่ำกว่า",
         "ไม่ถูกต้อง",
         "ไม่บังคับ",
+        "ไม่พบ",
+        "ไม่มี",
         "ไม่มีข้อมูล",
         "ไม่มีวัตถุประสงค์เพื่อประโยชน์ทางการค้า",
         "ไม่มีอักขระพิเศษนอกจาก",
@@ -403,10 +450,12 @@
         "ไม่สามารถส่งข้อมูล",
         "ไม่อนุมัติ",
         "ไม่อยู",
+        "ไม่อยู่ในรายการที่อนุญาต",
         "ยกเลิก",
         "ยอดเงินในการตีพิมพ์วารสาร",
         "ยอดเงินในการประชุมวิชาการ",
         "ยอดที่ใช้ของการขออนุมัติค่า",
+        "ยังไม่ได้ล็อกอิน",
         "ยืนยันข้อมูลถูกต้อง",
         "ยืนยันตัวตนด้วยบริการของ",
         "แยกตารางไปscore",
@@ -417,7 +466,9 @@
         "ร้อยละการมีส่วนร่วมในโครงการ",
         "รออนุมัติ",
         "ระดับ",
+        "ระดับคะแนนคุณภาพของการประชุมวิชาการ",
         "ระดับดีมาก",
+        "ระดับต้องเป็นระดับดีมาก",
         "ระดับมาตรฐาน",
         "ระบบสนับสนุนงานบริหารงานวิจัย",
         "ระบุ",
@@ -448,6 +499,7 @@
         "และค่าใช้จ่ายอื",
         "และจำเป็นต้องกรอกทุกช่อง",
         "และถูกต้อง",
+        "และมี",
         "และไม่อยู่ในฐานข้อมูลสากล",
         "และลบ",
         "และวันกรอกแบบฟอร์มได้",
@@ -470,7 +522,9 @@
         "วันสุดท้ายของการจ่ายค่าตีพิมพ์",
         "วันสุดท้ายของการลงทะเบียน",
         "วารสาร",
+        "วารสารใน",
         "วารสารอยู่ในข้อมูลสากล",
+        "วารสารอยู่ในฐานข้อมูลสากล",
         "วิจัยประยุกต์",
         "วิจัยพื้นฐาน",
         "วิจัยและพัฒนา",
@@ -502,14 +556,17 @@
         "หน้าที่ของผู้ใช้เดิม",
         "หรือ",
         "หรือคณะเป็นผู้ร่วมจัด",
+        "หรือค่า",
         "หรือจังหวัดที่ไปประชุมวิชาการ",
         "หรือต่างประเทศ",
         "หรือในประเทศ",
         "หรือประกาศผลได้",
         "หรือเป็นวันนี",
+        "หรือไม่มี",
         "หรือวันที่จัดงานได้",
         "หรือวันลงทะเบียนวันสุดท้ายได้",
         "หรือวันสมัคร",
+        "หรือสถานะอื",
         "หลักฐานการจัดลำดับ",
         "หลักฐานการประชุมวิชาการอยู่ในฐาน",
         "หลักฐานการส่งบทความ",
@@ -517,11 +574,14 @@
         "หลักฐานแสดงการจัดลำดับ",
         "หลักฐานแสดงการอยู่ในฐานข้อมูลสากล",
         "หลักฐานเอกสาร",
+        "หลักสูตรของนักวิจัยร่วม",
         "หลังอัปเดต",
         "หัวหน้าโครงการ",
         "หากเป็น",
         "โหลดเอกสาร",
+        "ให้ไปหน้า",
         "ใหม่เข้าไป",
+        "ให้เรียกใช้",
         "อการประชุม",
         "อการประชุมทางวิชาการ",
         "อแก้ไข",
@@ -531,12 +591,15 @@
         "องานประชุมวิชาการ",
         "องานวิจัย",
         "อตนเองในฐาน",
+        "อนุญาตให้เข้าหน้า",
         "อนุมัติ",
         "อบทความ",
         "อประโยชน์ทางการค้า",
         "อโปรดทราบการจัดสรรวงเงิน",
         "อผลงานตีพิมพ์",
         "อผลงานวิจัย",
+        "อเมริกาใต้",
+        "อเมริกาเหนือ",
         "อวันที",
         "อวารสาร",
         "อแสดงสถานะว่ากำลังโหลดข้อมูล",
@@ -558,7 +621,8 @@
         "เอกสารประชาสัมพันธ์การจัดการประชุม",
         "เอกสารแสดงค่าลงทะเบียน",
         "เอกสารแสดงอัตราแลกเปลี",
-        "เอกสารหลักฐานที"
+        "เอกสารหลักฐานที",
+        "แอฟริกา"
     ],
     "cSpell.ignoreWords": [
         "กระบี",
