--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -168,7 +168,7 @@
         "กรุณาเลือกสูตรที่ใช้ในการคำนวณ",
         "กรุณาเลือกหน้าที",
         "กรุณาอัปโหลดไฟล์",
-        "กรุณาอัปโหลดลายเซ้นต์",
+        "กรุณาอัปโหลดลายเซ็น",
         "ก่อนกรอง",
         "ก่อนการตอบรับบทความ",
         "ก่อนการตอบรับบทความจากผู",
