Co-authored-by: Maneee <mymoon69@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "cSpell.words": [
         "accom",
         "addapproved",
-        "allhistory",
+        "allHistory",
         "allpost",
         "allstatus",
         "amout",
@@ -21,7 +21,7 @@
         "Dataforbackend",
         "dataforupdate",
         "Datenoteqal",
-        "eoffice",
+        "eOffice",
         "Filekris",
         "finc",
         "formattedres",
@@ -38,9 +38,9 @@
         "Mainbox",
         "maintext",
         "MDPI",
-        "myhistory",
+        "myHistory",
         "mynotification",
-        "mystatus",
+        "myStatus",
         "mytabs",
         "nameco",
         "nameeng",
